--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Midterm Exam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOw1XWZxk2Ejtq/g0fvLnpp",
+      "authorship_tag": "ABX9TyOoJWq3IPHeOgCuPFZC3Sc9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3ljUon4Z1_mk",
-        "outputId": "149cf487-6cd5-4690-ca27-d79004842ba0"
+        "outputId": "59abe6c5-a186-4872-ad1b-6d99735f971e"
       },
       "source": [
         "a=\"Vince Deilord V. Villasencio\"\n",
@@ -60,7 +60,7 @@
         "c=\"19 Years Old\"\n",
         "d=\"June 10, 2002\"\n",
         "e=\"378 Kaybagal Central, Tagaytay, City\"\n",
-        "f=\"Bachelor of Science in Electronics Engineer\"\n",
+        "f=\"Programming in Logic and Design\"\n",
         "g=\"1.43\"\n",
         "\n",
         "print(a)\n",
@@ -71,7 +71,7 @@
         "print(f)\n",
         "print(g)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
             "19 Years Old\n",
             "June 10, 2002\n",
             "378 Kaybagal Central, Tagaytay, City\n",
-            "Bachelor of Science in Electronics Engineer\n",
+            "Programming in Logic and Design\n",
             "1.43\n"
           ]
         }
